--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -46,11 +46,16 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
    "source": [
-    "# code goes here"
+    "# code goes here "
    ]
   }
  ],
