Empty Columns Popped

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,129 +222,9 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-01-10</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.75</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>64.83</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>41128772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-01-11</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.75</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>64.83</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>41128772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-01-12</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.75</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>64.83</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>41128772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-01-13</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.75</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>64.83</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>41128772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>AFG</td>\n",
-       "      <td>Asia</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2020-01-14</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>37.75</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>64.83</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>41128772</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 67 columns</p>\n",
+       "<p>5 rows × 67 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -354,11 +234,6 @@
        "2      AFG      Asia  Afghanistan  2020-01-07          0.0        0.0   \n",
        "3      AFG      Asia  Afghanistan  2020-01-08          0.0        0.0   \n",
        "4      AFG      Asia  Afghanistan  2020-01-09          0.0        0.0   \n",
-       "5      AFG      Asia  Afghanistan  2020-01-10          0.0        0.0   \n",
-       "6      AFG      Asia  Afghanistan  2020-01-11          0.0        0.0   \n",
-       "7      AFG      Asia  Afghanistan  2020-01-12          0.0        0.0   \n",
-       "8      AFG      Asia  Afghanistan  2020-01-13          0.0        0.0   \n",
-       "9      AFG      Asia  Afghanistan  2020-01-14          0.0        0.0   \n",
        "\n",
        "   new_cases_smoothed  total_deaths  new_deaths  new_deaths_smoothed  ...  \\\n",
        "0                 NaN           0.0         0.0                  NaN  ...   \n",
@@ -366,11 +241,6 @@
        "2                 NaN           0.0         0.0                  NaN  ...   \n",
        "3                 NaN           0.0         0.0                  NaN  ...   \n",
        "4                 NaN           0.0         0.0                  NaN  ...   \n",
-       "5                 0.0           0.0         0.0                  0.0  ...   \n",
-       "6                 0.0           0.0         0.0                  0.0  ...   \n",
-       "7                 0.0           0.0         0.0                  0.0  ...   \n",
-       "8                 0.0           0.0         0.0                  0.0  ...   \n",
-       "9                 0.0           0.0         0.0                  0.0  ...   \n",
        "\n",
        "   male_smokers  handwashing_facilities  hospital_beds_per_thousand  \\\n",
        "0           NaN                   37.75                         0.5   \n",
@@ -378,11 +248,6 @@
        "2           NaN                   37.75                         0.5   \n",
        "3           NaN                   37.75                         0.5   \n",
        "4           NaN                   37.75                         0.5   \n",
-       "5           NaN                   37.75                         0.5   \n",
-       "6           NaN                   37.75                         0.5   \n",
-       "7           NaN                   37.75                         0.5   \n",
-       "8           NaN                   37.75                         0.5   \n",
-       "9           NaN                   37.75                         0.5   \n",
        "\n",
        "   life_expectancy  human_development_index  population  \\\n",
        "0            64.83                     0.51    41128772   \n",
@@ -390,11 +255,6 @@
        "2            64.83                     0.51    41128772   \n",
        "3            64.83                     0.51    41128772   \n",
        "4            64.83                     0.51    41128772   \n",
-       "5            64.83                     0.51    41128772   \n",
-       "6            64.83                     0.51    41128772   \n",
-       "7            64.83                     0.51    41128772   \n",
-       "8            64.83                     0.51    41128772   \n",
-       "9            64.83                     0.51    41128772   \n",
        "\n",
        "   excess_mortality_cumulative_absolute  excess_mortality_cumulative  \\\n",
        "0                                   NaN                          NaN   \n",
@@ -402,11 +262,6 @@
        "2                                   NaN                          NaN   \n",
        "3                                   NaN                          NaN   \n",
        "4                                   NaN                          NaN   \n",
-       "5                                   NaN                          NaN   \n",
-       "6                                   NaN                          NaN   \n",
-       "7                                   NaN                          NaN   \n",
-       "8                                   NaN                          NaN   \n",
-       "9                                   NaN                          NaN   \n",
        "\n",
        "   excess_mortality  excess_mortality_cumulative_per_million  \n",
        "0               NaN                                      NaN  \n",
@@ -414,16 +269,11 @@
        "2               NaN                                      NaN  \n",
        "3               NaN                                      NaN  \n",
        "4               NaN                                      NaN  \n",
-       "5               NaN                                      NaN  \n",
-       "6               NaN                                      NaN  \n",
-       "7               NaN                                      NaN  \n",
-       "8               NaN                                      NaN  \n",
-       "9               NaN                                      NaN  \n",
        "\n",
-       "[10 rows x 67 columns]"
+       "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,6 +283,241 @@
     "data = \"./owid-covid-data.csv\"\n",
     "covid_df = pd.read_csv(data)\n",
     "covid_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>iso_code</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>location</th>\n",
+       "      <th>date</th>\n",
+       "      <th>total_cases</th>\n",
+       "      <th>new_cases</th>\n",
+       "      <th>new_cases_smoothed</th>\n",
+       "      <th>total_deaths</th>\n",
+       "      <th>new_deaths</th>\n",
+       "      <th>new_deaths_smoothed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>extreme_poverty</th>\n",
+       "      <th>cardiovasc_death_rate</th>\n",
+       "      <th>diabetes_prevalence</th>\n",
+       "      <th>female_smokers</th>\n",
+       "      <th>male_smokers</th>\n",
+       "      <th>handwashing_facilities</th>\n",
+       "      <th>hospital_beds_per_thousand</th>\n",
+       "      <th>life_expectancy</th>\n",
+       "      <th>human_development_index</th>\n",
+       "      <th>population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020-01-05</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>597.03</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>64.83</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>41128772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020-01-06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>597.03</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>64.83</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>41128772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020-01-07</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>597.03</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>64.83</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>41128772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020-01-08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>597.03</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>64.83</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>41128772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AFG</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2020-01-09</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>597.03</td>\n",
+       "      <td>9.59</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>64.83</td>\n",
+       "      <td>0.51</td>\n",
+       "      <td>41128772</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 63 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  iso_code continent     location        date  total_cases  new_cases  \\\n",
+       "0      AFG      Asia  Afghanistan  2020-01-05          0.0        0.0   \n",
+       "1      AFG      Asia  Afghanistan  2020-01-06          0.0        0.0   \n",
+       "2      AFG      Asia  Afghanistan  2020-01-07          0.0        0.0   \n",
+       "3      AFG      Asia  Afghanistan  2020-01-08          0.0        0.0   \n",
+       "4      AFG      Asia  Afghanistan  2020-01-09          0.0        0.0   \n",
+       "\n",
+       "   new_cases_smoothed  total_deaths  new_deaths  new_deaths_smoothed  ...  \\\n",
+       "0                 NaN           0.0         0.0                  NaN  ...   \n",
+       "1                 NaN           0.0         0.0                  NaN  ...   \n",
+       "2                 NaN           0.0         0.0                  NaN  ...   \n",
+       "3                 NaN           0.0         0.0                  NaN  ...   \n",
+       "4                 NaN           0.0         0.0                  NaN  ...   \n",
+       "\n",
+       "   extreme_poverty  cardiovasc_death_rate  diabetes_prevalence  \\\n",
+       "0              NaN                 597.03                 9.59   \n",
+       "1              NaN                 597.03                 9.59   \n",
+       "2              NaN                 597.03                 9.59   \n",
+       "3              NaN                 597.03                 9.59   \n",
+       "4              NaN                 597.03                 9.59   \n",
+       "\n",
+       "   female_smokers  male_smokers  handwashing_facilities  \\\n",
+       "0             NaN           NaN                   37.75   \n",
+       "1             NaN           NaN                   37.75   \n",
+       "2             NaN           NaN                   37.75   \n",
+       "3             NaN           NaN                   37.75   \n",
+       "4             NaN           NaN                   37.75   \n",
+       "\n",
+       "   hospital_beds_per_thousand  life_expectancy  human_development_index  \\\n",
+       "0                         0.5            64.83                     0.51   \n",
+       "1                         0.5            64.83                     0.51   \n",
+       "2                         0.5            64.83                     0.51   \n",
+       "3                         0.5            64.83                     0.51   \n",
+       "4                         0.5            64.83                     0.51   \n",
+       "\n",
+       "   population  \n",
+       "0    41128772  \n",
+       "1    41128772  \n",
+       "2    41128772  \n",
+       "3    41128772  \n",
+       "4    41128772  \n",
+       "\n",
+       "[5 rows x 63 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Pop Empty Columns\n",
+    "columns = [\"excess_mortality_cumulative_absolute\", \"excess_mortality_cumulative\", \"excess_mortality\", \"excess_mortality_cumulative_per_million\"]\n",
+    "for column in columns:\n",
+    "    covid_df.pop(column)\n",
+    "\n",
+    "covid_df.head()"
    ]
   }
  ],
