--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -15,7 +15,34 @@
    "source": [
     "## Project Foundation:\n",
     "\n",
-    "- The README identifies the dataset and explains  its suitability/justification "
+    "\n",
+    "#### Dataset Selection & Justification\n",
+    "\n",
+    "\n",
+    "**Dataset:** COVID-19 Global Data (Full Version)  \n",
+    "\n",
+    "**Source:** Our World in Data GitHub Repository – [Dataset Link](https://github.com/owid/covid-19-data/tree/master/public/data)  \n",
+    "\n",
+    "**Description:**  \n",
+    "This dataset contains country-level daily COVID-19 statistics, including cases, deaths, vaccinations, testing, and demographic/economic indicators. Key columns include:  \n",
+    "\n",
+    "- `location`: Country or region name  \n",
+    "- `date`: Date of observation  \n",
+    "- `total_cases`: Cumulative confirmed COVID-19 cases  \n",
+    "- `new_cases`: New cases reported for that day  \n",
+    "- `total_deaths`: Cumulative deaths  \n",
+    "- `new_deaths`: Daily deaths  \n",
+    "- `people_vaccinated`: Number of people vaccinated \n",
+    "\n",
+    "**Size:** Approximately 430,000 rows and 67 columns.  \n",
+    "\n",
+    "**Suitability & Relevance:**  \n",
+    "- Real-world data with numeric, categorical, and date variables.  \n",
+    "- Contains missing values, outliers, and inconsistencies -> ideal for demonstrating data cleaning techniques.  \n",
+    "- Large enough to perform meaningful analysis but manageable for a Jupyter Notebook.  \n",
+    "- Relevant for public health, statistics, and data analysis assignments, making it easy to justify insights or visualizations.  \n",
+    "\n",
+    "> ⚠ Note: This GitHub version is no longer updated as of August 19, 2024. For the latest data, OWID provides updated CSVs through their [data catalog](https://catalog.ourworldindata.org/garden/covid/latest/compact/compact.csv).\n"
    ]
   },
   {
@@ -118,39 +145,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Missing Values:\n",
-      " continent                                   26525\n",
-      "total_cases                                 17631\n",
-      "new_cases                                   19276\n",
-      "new_cases_smoothed                          20506\n",
-      "total_deaths                                17631\n",
-      "                                            ...  \n",
-      "human_development_index                    110308\n",
-      "excess_mortality_cumulative_absolute       416024\n",
-      "excess_mortality_cumulative                416024\n",
-      "excess_mortality                           416024\n",
-      "excess_mortality_cumulative_per_million    416024\n",
-      "Length: 63, dtype: int64\n"
+      "continent                                      26525\n",
+      "total_cases                                    17631\n",
+      "new_cases                                      19276\n",
+      "new_cases_smoothed                             20506\n",
+      "total_deaths                                   17631\n",
+      "new_deaths                                     18827\n",
+      "new_deaths_smoothed                            20057\n",
+      "total_cases_per_million                        17631\n",
+      "new_cases_per_million                          19276\n",
+      "new_cases_smoothed_per_million                 20506\n",
+      "total_deaths_per_million                       17631\n",
+      "new_deaths_per_million                         18827\n",
+      "new_deaths_smoothed_per_million                20057\n",
+      "reproduction_rate                             244618\n",
+      "icu_patients                                  390319\n",
+      "icu_patients_per_million                      390319\n",
+      "hosp_patients                                 388779\n",
+      "hosp_patients_per_million                     388779\n",
+      "weekly_icu_admissions                         418442\n",
+      "weekly_icu_admissions_per_million             418442\n",
+      "weekly_hosp_admissions                        404938\n",
+      "weekly_hosp_admissions_per_million            404938\n",
+      "total_tests                                   350048\n",
+      "new_tests                                     354032\n",
+      "total_tests_per_thousand                      350048\n",
+      "new_tests_per_thousand                        354032\n",
+      "new_tests_smoothed                            325470\n",
+      "new_tests_smoothed_per_thousand               325470\n",
+      "positive_rate                                 333508\n",
+      "tests_per_case                                335087\n",
+      "tests_units                                   322647\n",
+      "total_vaccinations                            344018\n",
+      "people_vaccinated                             348303\n",
+      "people_fully_vaccinated                       351374\n",
+      "total_boosters                                375835\n",
+      "new_vaccinations                              358464\n",
+      "new_vaccinations_smoothed                     234406\n",
+      "total_vaccinations_per_hundred                344018\n",
+      "people_vaccinated_per_hundred                 348303\n",
+      "people_fully_vaccinated_per_hundred           351374\n",
+      "total_boosters_per_hundred                    375835\n",
+      "new_vaccinations_smoothed_per_million         234406\n",
+      "new_people_vaccinated_smoothed                237258\n",
+      "new_people_vaccinated_smoothed_per_hundred    237258\n",
+      "stringency_index                              233245\n",
+      "population_density                             68943\n",
+      "median_age                                     94772\n",
+      "aged_65_older                                 106165\n",
+      "aged_70_older                                  98120\n",
+      "gdp_per_capita                                101143\n",
+      "extreme_poverty                               217439\n",
+      "cardiovasc_death_rate                         100570\n",
+      "diabetes_prevalence                            83524\n",
+      "female_smokers                                182270\n",
+      "male_smokers                                  185618\n",
+      "handwashing_facilities                        267694\n",
+      "hospital_beds_per_thousand                    138746\n",
+      "life_expectancy                                39136\n",
+      "human_development_index                       110308\n",
+      "excess_mortality_cumulative_absolute          416024\n",
+      "excess_mortality_cumulative                   416024\n",
+      "excess_mortality                              416024\n",
+      "excess_mortality_cumulative_per_million       416024\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
     "# 3. Count of missing values per column\n",
+    "pd.set_option('display.max_rows', None)\n",
     "missing_values = covid_df.isna().sum()\n",
-    "print(\"\\nMissing Values:\\n\", missing_values[missing_values > 0])"
+    "print(missing_values[missing_values > 0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -469,9 +547,8 @@
        "[5 rows x 67 columns]"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -521,7 +598,7 @@
    ],
    "source": [
     "# Print column names\n",
-    "print(covid_df.columns)\n"
+    "print(covid_df.columns)"
    ]
   },
   {
@@ -529,30 +606,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data cleaning"
+    "### Data cleaning\n",
+    "Now that we have examined the data, we can perform some cleaning:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_cases negative values: 0\n",
-      "new_deaths negative values: 0\n"
-     ]
-    }
-   ],
    "source": [
-    "# Check for negative numbers in key columns\n",
-    "cols_to_check = ['new_cases', 'new_deaths']\n",
-    "for col in cols_to_check:\n",
-    "    if col in covid_df.columns:\n",
-    "        neg_count = (covid_df[col] < 0).sum()\n",
-    "        print(f\"{col} negative values:\", neg_count)"
+    "1) **Changing the data type of \"date\" to from 'object' to 'datetime':**\n",
+    "\n",
+    "When we printed the column data types above in action labeled: `# 2. Column data types`, \n",
+    "\n",
+    "we saw that the 'date' column was of type 'object'. The next code cell changes\n",
+    "\n",
+    "the data type to 'datetime'\n"
    ]
   },
   {
@@ -582,17 +651,135 @@
     }
    ],
    "source": [
-    "# changing date to datetime object\n",
+    "# changing the data type of \"date\" to from 'object' to 'datetime'\n",
     "covid_df['date'] = pd.to_datetime(covid_df['date'])\n",
     "print(\"\\nColumn Data Types:\\n\", covid_df.dtypes)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2) **Dropping columns with over 90% of data values missing:**\n",
+    "\n",
+    "When we printed out the number of missing data entries above in the action labeled   `# 3. Count of missing values per column`,\n",
+    "\n",
+    "we saw that many of the columns had majority of their values missing. So, in the next code cell, we drop all columns that\n",
+    "\n",
+    "have > 90% missing values and print the remaining columns. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped columns due to excessive missing values:\n",
+      "{'people_fully_vaccinated', 'excess_mortality_cumulative', 'new_vaccinations_smoothed', 'total_boosters', 'population_density', 'new_tests_smoothed_per_thousand', 'new_people_vaccinated_smoothed_per_hundred', 'new_tests', 'positive_rate', 'reproduction_rate', 'hosp_patients_per_million', 'weekly_hosp_admissions_per_million', 'cardiovasc_death_rate', 'icu_patients', 'aged_65_older', 'stringency_index', 'hosp_patients', 'icu_patients_per_million', 'weekly_hosp_admissions', 'total_tests', 'median_age', 'tests_per_case', 'people_fully_vaccinated_per_hundred', 'total_vaccinations', 'new_vaccinations', 'hospital_beds_per_thousand', 'total_tests_per_thousand', 'excess_mortality_cumulative_per_million', 'weekly_icu_admissions', 'excess_mortality', 'gdp_per_capita', 'total_boosters_per_hundred', 'new_tests_smoothed', 'handwashing_facilities', 'extreme_poverty', 'human_development_index', 'excess_mortality_cumulative_absolute', 'people_vaccinated', 'new_tests_per_thousand', 'female_smokers', 'new_people_vaccinated_smoothed', 'total_vaccinations_per_hundred', 'weekly_icu_admissions_per_million', 'aged_70_older', 'new_vaccinations_smoothed_per_million', 'diabetes_prevalence', 'male_smokers', 'tests_units', 'people_vaccinated_per_hundred'}\n",
+      "\n",
+      "Remaining columns: 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop columns with more than 90% missing values\n",
+    "threshold = 0.9 * len(covid_df)\n",
+    "covid_df_cleaned = covid_df.dropna(thresh=threshold, axis=1)\n",
+    "\n",
+    "print(\"Dropped columns due to excessive missing values:\")\n",
+    "print(set(covid_df.columns) - set(covid_df_cleaned.columns))\n",
+    "\n",
+    "print(\"\\nRemaining columns:\", len(covid_df_cleaned.columns))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 429435 entries, 0 to 429434\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                           Non-Null Count   Dtype         \n",
+      "---  ------                           --------------   -----         \n",
+      " 0   iso_code                         429435 non-null  object        \n",
+      " 1   continent                        402910 non-null  object        \n",
+      " 2   location                         429435 non-null  object        \n",
+      " 3   date                             429435 non-null  datetime64[ns]\n",
+      " 4   total_cases                      411804 non-null  float64       \n",
+      " 5   new_cases                        410159 non-null  float64       \n",
+      " 6   new_cases_smoothed               408929 non-null  float64       \n",
+      " 7   total_deaths                     411804 non-null  float64       \n",
+      " 8   new_deaths                       410608 non-null  float64       \n",
+      " 9   new_deaths_smoothed              409378 non-null  float64       \n",
+      " 10  total_cases_per_million          411804 non-null  float64       \n",
+      " 11  new_cases_per_million            410159 non-null  float64       \n",
+      " 12  new_cases_smoothed_per_million   408929 non-null  float64       \n",
+      " 13  total_deaths_per_million         411804 non-null  float64       \n",
+      " 14  new_deaths_per_million           410608 non-null  float64       \n",
+      " 15  new_deaths_smoothed_per_million  409378 non-null  float64       \n",
+      " 16  life_expectancy                  390299 non-null  float64       \n",
+      " 17  population                       429435 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), float64(13), int64(1), object(3)\n",
+      "memory usage: 59.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "covid_df_cleaned.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) **Manually picking which columns to drop now.**\n",
+    "We are not interested in:\n",
+    "- **isocode**\n",
+    "    - we have other metadata identifiers: 'continent, location, date'\n",
+    "    - so, this column is useless to us.\n",
+    "- Derived metrics (per million / smoothed) *_per_million, *_smoothed\n",
+    "    - These columns are redundant: they are scaled or averaged versions of core stats\n",
+    "    - dropping: \n",
+    "        **new_cases_smoothed, new_deaths_smoothed, total_cases_per_million, \n",
+    "        new_cases_per_million, new_cases_smoothed_per_million, total_deaths_per_million\n",
+    "        new_deaths_per_million, new_deaths_smoothed_per_million**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remaining columns: ['continent', 'location', 'date', 'total_cases', 'new_cases', 'total_deaths', 'new_deaths', 'life_expectancy', 'population']\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_drop = [\n",
+    "    'iso_code', 'new_cases_smoothed', 'new_deaths_smoothed',\n",
+    "    'total_cases_per_million', 'new_cases_per_million',\n",
+    "    'new_cases_smoothed_per_million', 'total_deaths_per_million',\n",
+    "    'new_deaths_per_million', 'new_deaths_smoothed_per_million'\n",
+    "]\n",
+    "\n",
+    "covid_df_cleaned = covid_df_cleaned.drop(columns=columns_to_drop, errors='ignore')\n",
+    "print(\"Remaining columns:\", covid_df_cleaned.columns.tolist())"
+   ]
   }
  ],
  "metadata": {
