typo fix + summary cleaning cell

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,8 +547,9 @@
        "[5 rows x 67 columns]"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -558,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -635,23 +636,79 @@
      "text": [
       "\n",
       "Column Data Types:\n",
-      " iso_code                                           object\n",
-      "continent                                          object\n",
-      "location                                           object\n",
-      "date                                       datetime64[ns]\n",
-      "total_cases                                       float64\n",
-      "                                                ...      \n",
-      "population                                          int64\n",
-      "excess_mortality_cumulative_absolute              float64\n",
-      "excess_mortality_cumulative                       float64\n",
-      "excess_mortality                                  float64\n",
-      "excess_mortality_cumulative_per_million           float64\n",
-      "Length: 67, dtype: object\n"
+      " iso_code                                              object\n",
+      "continent                                             object\n",
+      "location                                              object\n",
+      "date                                          datetime64[ns]\n",
+      "total_cases                                          float64\n",
+      "new_cases                                            float64\n",
+      "new_cases_smoothed                                   float64\n",
+      "total_deaths                                         float64\n",
+      "new_deaths                                           float64\n",
+      "new_deaths_smoothed                                  float64\n",
+      "total_cases_per_million                              float64\n",
+      "new_cases_per_million                                float64\n",
+      "new_cases_smoothed_per_million                       float64\n",
+      "total_deaths_per_million                             float64\n",
+      "new_deaths_per_million                               float64\n",
+      "new_deaths_smoothed_per_million                      float64\n",
+      "reproduction_rate                                    float64\n",
+      "icu_patients                                         float64\n",
+      "icu_patients_per_million                             float64\n",
+      "hosp_patients                                        float64\n",
+      "hosp_patients_per_million                            float64\n",
+      "weekly_icu_admissions                                float64\n",
+      "weekly_icu_admissions_per_million                    float64\n",
+      "weekly_hosp_admissions                               float64\n",
+      "weekly_hosp_admissions_per_million                   float64\n",
+      "total_tests                                          float64\n",
+      "new_tests                                            float64\n",
+      "total_tests_per_thousand                             float64\n",
+      "new_tests_per_thousand                               float64\n",
+      "new_tests_smoothed                                   float64\n",
+      "new_tests_smoothed_per_thousand                      float64\n",
+      "positive_rate                                        float64\n",
+      "tests_per_case                                       float64\n",
+      "tests_units                                           object\n",
+      "total_vaccinations                                   float64\n",
+      "people_vaccinated                                    float64\n",
+      "people_fully_vaccinated                              float64\n",
+      "total_boosters                                       float64\n",
+      "new_vaccinations                                     float64\n",
+      "new_vaccinations_smoothed                            float64\n",
+      "total_vaccinations_per_hundred                       float64\n",
+      "people_vaccinated_per_hundred                        float64\n",
+      "people_fully_vaccinated_per_hundred                  float64\n",
+      "total_boosters_per_hundred                           float64\n",
+      "new_vaccinations_smoothed_per_million                float64\n",
+      "new_people_vaccinated_smoothed                       float64\n",
+      "new_people_vaccinated_smoothed_per_hundred           float64\n",
+      "stringency_index                                     float64\n",
+      "population_density                                   float64\n",
+      "median_age                                           float64\n",
+      "aged_65_older                                        float64\n",
+      "aged_70_older                                        float64\n",
+      "gdp_per_capita                                       float64\n",
+      "extreme_poverty                                      float64\n",
+      "cardiovasc_death_rate                                float64\n",
+      "diabetes_prevalence                                  float64\n",
+      "female_smokers                                       float64\n",
+      "male_smokers                                         float64\n",
+      "handwashing_facilities                               float64\n",
+      "hospital_beds_per_thousand                           float64\n",
+      "life_expectancy                                      float64\n",
+      "human_development_index                              float64\n",
+      "population                                             int64\n",
+      "excess_mortality_cumulative_absolute                 float64\n",
+      "excess_mortality_cumulative                          float64\n",
+      "excess_mortality                                     float64\n",
+      "excess_mortality_cumulative_per_million              float64\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "# changing the data type of \"date\" to from 'object' to 'datetime'\n",
+    "# changing the data type of \"date\" from 'object' to 'datetime'\n",
     "covid_df['date'] = pd.to_datetime(covid_df['date'])\n",
     "print(\"\\nColumn Data Types:\\n\", covid_df.dtypes)"
    ]
@@ -672,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +737,7 @@
      "output_type": "stream",
      "text": [
       "Dropped columns due to excessive missing values:\n",
-      "{'people_fully_vaccinated', 'excess_mortality_cumulative', 'new_vaccinations_smoothed', 'total_boosters', 'population_density', 'new_tests_smoothed_per_thousand', 'new_people_vaccinated_smoothed_per_hundred', 'new_tests', 'positive_rate', 'reproduction_rate', 'hosp_patients_per_million', 'weekly_hosp_admissions_per_million', 'cardiovasc_death_rate', 'icu_patients', 'aged_65_older', 'stringency_index', 'hosp_patients', 'icu_patients_per_million', 'weekly_hosp_admissions', 'total_tests', 'median_age', 'tests_per_case', 'people_fully_vaccinated_per_hundred', 'total_vaccinations', 'new_vaccinations', 'hospital_beds_per_thousand', 'total_tests_per_thousand', 'excess_mortality_cumulative_per_million', 'weekly_icu_admissions', 'excess_mortality', 'gdp_per_capita', 'total_boosters_per_hundred', 'new_tests_smoothed', 'handwashing_facilities', 'extreme_poverty', 'human_development_index', 'excess_mortality_cumulative_absolute', 'people_vaccinated', 'new_tests_per_thousand', 'female_smokers', 'new_people_vaccinated_smoothed', 'total_vaccinations_per_hundred', 'weekly_icu_admissions_per_million', 'aged_70_older', 'new_vaccinations_smoothed_per_million', 'diabetes_prevalence', 'male_smokers', 'tests_units', 'people_vaccinated_per_hundred'}\n",
+      "{'total_vaccinations_per_hundred', 'hospital_beds_per_thousand', 'aged_65_older', 'total_tests', 'people_fully_vaccinated', 'people_vaccinated', 'icu_patients', 'new_vaccinations_smoothed', 'new_tests_per_thousand', 'new_vaccinations_smoothed_per_million', 'handwashing_facilities', 'people_vaccinated_per_hundred', 'new_tests_smoothed_per_thousand', 'people_fully_vaccinated_per_hundred', 'total_tests_per_thousand', 'weekly_hosp_admissions_per_million', 'total_boosters', 'positive_rate', 'excess_mortality', 'excess_mortality_cumulative_absolute', 'aged_70_older', 'total_vaccinations', 'weekly_icu_admissions', 'median_age', 'hosp_patients_per_million', 'cardiovasc_death_rate', 'weekly_icu_admissions_per_million', 'reproduction_rate', 'hosp_patients', 'diabetes_prevalence', 'weekly_hosp_admissions', 'new_tests', 'male_smokers', 'new_people_vaccinated_smoothed_per_hundred', 'human_development_index', 'new_people_vaccinated_smoothed', 'tests_units', 'excess_mortality_cumulative_per_million', 'new_tests_smoothed', 'stringency_index', 'icu_patients_per_million', 'tests_per_case', 'extreme_poverty', 'female_smokers', 'excess_mortality_cumulative', 'total_boosters_per_hundred', 'new_vaccinations', 'gdp_per_capita', 'population_density'}\n",
       "\n",
       "Remaining columns: 18\n"
      ]
@@ -699,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -779,6 +836,33 @@
     "\n",
     "covid_df_cleaned = covid_df_cleaned.drop(columns=columns_to_drop, errors='ignore')\n",
     "print(\"Remaining columns:\", covid_df_cleaned.columns.tolist())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After cleaning, the dataset’s total missing values dropped from 14,586,938 to 139,026, confirming that most incomplete columns were successfully removed. The remaining missing values are minimal and may correspond to countries with limited reporting. This cleaned dataset is now suitable for analysis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing before: 14586938\n",
+      "Missing after: 139026\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Missing before:\", covid_df.isna().sum().sum())\n",
+    "print(\"Missing after:\", covid_df_cleaned.isna().sum().sum())"
    ]
   }
  ],
