--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -1624,10 +1624,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1: Does a countries life expectancy correlate with its cumulative mortality rate?"
+    "Question 1: Does a country's life expectancy correlate with its cumulative mortality rate?"
    ]
   },
   {
@@ -1763,17 +1764,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This presentation of data really demonstrates how nations with an older demographic suffered higher death rates. "
+    "The correlation between life expectancy and cumulative deaths per million is approximately 0.49, indicating a moderate positive relationship. This suggests that countries with higher life expectancy tended to experience higher recorded COVID-19 mortality."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 2: Which continent had the highest had the highest death rate when adjusted for population?"
+    "Question 2: Which continent had the highest death rate when adjusted for population?"
    ]
   },
   {
@@ -2028,10 +2031,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This really presents countries whose healthcare systems were overwhelmed by the virus. "
+    "The case fatality rate (CFR) varies substantially across countries. The highest CFR values appear in countries such as Yemen, Sudan, Syria, and Somalia. These extremely high percentages likely reflect a combination of factors — including limited testing capacity, underreporting of mild or asymptomatic infections, and challenges in healthcare access and data collection.\n",
+    "\n",
+    "Countries such as Peru and Mexico also show relatively elevated CFR values, which may indicate both the severity of outbreaks and strain on healthcare resources, though additional variables would be needed to confirm this conclusively. Overall, the results highlight large differences in reported fatality rates across locations."
    ]
   },
   {
@@ -2154,10 +2160,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I think this data really shows how hard the pandemic hit countries all over the world. As far as location goes, some of these countries are very isolated and nowhere near eachother yet the percentage of their population infected is extremely high."
+    "The percentage of the population confirmed infected varies widely by country. Small or isolated countries such as Cyprus, Brunei, and San Marino appear at the top, with over 70% of the population reported as infected. In contrast, larger countries generally show lower percentages due to their population size and reporting differences. These results highlight how population size, testing capacity, and reporting practices can strongly influence the observed infection percentages across countries."
    ]
   },
   {
@@ -2246,10 +2253,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This really shows the growth and eventual reduction in the spread of the virus over the course of many years. The pandemic had an explosion of growth in the first 20 months and over time started to slow down."
+    "The monthly global new cases show distinct waves of the pandemic. After a small initial number in early 2020, reported cases increased rapidly, peaking during major surges in 2021 and early 2022, before gradually declining through 2024. While this reflects overall trends in reported cases, regional differences and changes in testing capacity likely influenced the reported numbers. The data highlights the dynamic, wave-like nature of the pandemic rather than a steady growth or uniform reduction."
    ]
   },
   {
@@ -2257,7 +2265,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Conclusion and Reflection: "
+    "### 2. Conclusion and Reflection: \n",
+    "Our analysis revealed key patterns in the global COVID-19 pandemic. Europe and North America experienced the highest peaks in new cases, while Africa and Oceania had flatter curves, reflecting uneven transmission and testing. High life expectancy countries showed both low and very high mortality per million, indicating that demographic structure and local outbreak dynamics were more influential than baseline health alone. Total cases and deaths were strongly correlated, while socioeconomic and healthcare indicators like GDP and hospital beds had little direct effect on mortality.\n",
+    "\n",
+    "The Random Forest model predicted daily mortality with an R² of 0.7445, confirming that current new case rates and life expectancy are strong predictors. Limitations include variable reporting across countries, simplified aggregation, and the inability to infer causation from correlations. Future work could incorporate regional data, vaccination rates, and public health interventions to improve predictions and explore causal effects. Overall, combining EDA with modeling provided both descriptive and quantitative insights into pandemic dynamics."
    ]
   },
   {
