--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -737,7 +737,7 @@
      "output_type": "stream",
      "text": [
       "Dropped columns due to excessive missing values:\n",
-      "{'new_tests', 'excess_mortality_cumulative', 'new_people_vaccinated_smoothed_per_hundred', 'male_smokers', 'new_tests_per_thousand', 'total_boosters', 'total_vaccinations', 'weekly_icu_admissions', 'weekly_hosp_admissions', 'excess_mortality_cumulative_absolute', 'total_boosters_per_hundred', 'gdp_per_capita', 'icu_patients', 'median_age', 'icu_patients_per_million', 'new_tests_smoothed', 'new_vaccinations', 'handwashing_facilities', 'hosp_patients', 'cardiovasc_death_rate', 'diabetes_prevalence', 'reproduction_rate', 'tests_per_case', 'hospital_beds_per_thousand', 'people_fully_vaccinated_per_hundred', 'female_smokers', 'excess_mortality_cumulative_per_million', 'population_density', 'stringency_index', 'total_tests', 'aged_65_older', 'excess_mortality', 'new_tests_smoothed_per_thousand', 'new_vaccinations_smoothed_per_million', 'hosp_patients_per_million', 'weekly_hosp_admissions_per_million', 'people_fully_vaccinated', 'aged_70_older', 'people_vaccinated', 'total_tests_per_thousand', 'people_vaccinated_per_hundred', 'new_people_vaccinated_smoothed', 'total_vaccinations_per_hundred', 'tests_units', 'positive_rate', 'weekly_icu_admissions_per_million', 'human_development_index', 'new_vaccinations_smoothed', 'extreme_poverty'}\n",
+      "{'handwashing_facilities', 'gdp_per_capita', 'new_vaccinations_smoothed', 'total_vaccinations_per_hundred', 'new_people_vaccinated_smoothed', 'weekly_hosp_admissions_per_million', 'excess_mortality_cumulative_per_million', 'total_tests_per_thousand', 'icu_patients_per_million', 'total_vaccinations', 'new_tests_per_thousand', 'people_fully_vaccinated_per_hundred', 'tests_units', 'excess_mortality', 'new_tests_smoothed', 'human_development_index', 'weekly_icu_admissions_per_million', 'median_age', 'female_smokers', 'reproduction_rate', 'hosp_patients_per_million', 'new_people_vaccinated_smoothed_per_hundred', 'population_density', 'extreme_poverty', 'aged_70_older', 'excess_mortality_cumulative_absolute', 'male_smokers', 'new_tests', 'hospital_beds_per_thousand', 'total_tests', 'people_fully_vaccinated', 'diabetes_prevalence', 'people_vaccinated', 'people_vaccinated_per_hundred', 'total_boosters_per_hundred', 'total_boosters', 'new_vaccinations_smoothed_per_million', 'weekly_hosp_admissions', 'excess_mortality_cumulative', 'weekly_icu_admissions', 'tests_per_case', 'hosp_patients', 'icu_patients', 'new_vaccinations', 'aged_65_older', 'positive_rate', 'new_tests_smoothed_per_thousand', 'stringency_index', 'cardiovasc_death_rate'}\n",
       "\n",
       "Remaining columns: 18\n"
      ]
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
        "55                  Czechia            79.38               4146.087427"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
        "0         Africa      259117.0  1426736614              181.615161"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2146,7 +2146,7 @@
        "130     Luxembourg         60.769208"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,7 +2176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2330,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\parke\\AppData\\Local\\Temp\\ipykernel_30856\\941426786.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/wp/mdg2jttn4d545t58lb5cj5xr0000gn/T/ipykernel_31559/941426786.py:13: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -2429,18 +2429,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[29]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestRegressor\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m r2_score\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'sklearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training Random Forest Regressor...\n",
+      "Training Complete.\n",
+      "\n",
+      "Model Performance (Random Forest Regressor):\n",
+      "R-squared (R2) Score: 0.7445\n",
+      "\n",
+      "Top 5 Feature Importances:\n",
+      "day_of_pandemic    0.309971\n",
+      "total_deaths       0.236314\n",
+      "population         0.181242\n",
+      "total_cases        0.122759\n",
+      "life_expectancy    0.074296\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -2472,7 +2481,8 @@
     "# Calculate Feature Importance\n",
     "feature_importances = pd.Series(rf_model.feature_importances_, index=X.columns).sort_values(ascending=False)\n",
     "print(\"\\nTop 5 Feature Importances:\")\n",
-    "print(feature_importances.head(5).to_markdown())"
+    "# Change the print line to display the standard Series output\n",
+    "print(feature_importances.head(5))"
    ]
   },
   {
@@ -2513,7 +2523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
